--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
-Django>=3.1.1
+asgiref==3.3.4
+attrs==21.2.0
+certifi==2021.5.30
+chardet==4.0.0
+coreapi==2.3.3
+coreschema==0.0.4
+Django==3.2.4
 djangorestframework==3.11.2
-psycopg2-binary>=2.8
-requests
-pytest
-responses
-python-dotenv
-drf-yasg
+drf-yasg==1.20.0
+idna==2.10
+inflection==0.5.1
+iniconfig==1.1.1
+itypes==1.2.0
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+packaging==20.9
+pluggy==0.13.1
+psycopg2-binary==2.9.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+python-dotenv==0.18.0
+pytz==2021.1
+requests==2.25.1
+responses==0.13.3
+ruamel.yaml==0.17.9
+ruamel.yaml.clib==0.2.2
+six==1.16.0
+sqlparse==0.4.1
+toml==0.10.2
+uritemplate==3.0.1
+urllib3==1.26.5
